tests/neg/i15998.check
-- [E007] Type Mismatch Error: tests/neg/i15998.scala:11:23 ------------------------------------------------------------
11 |  RingSeq.isRotationOf("DAB") // error
   |                       ^^^^^
   |                      Found:    ("DAB" : String)
   |                      Required: CC[A]
   |
   |                      where:    A  is a type variable
   |                                CC is a type variable with constraint <: [B] =>> collection.SeqOps[B, CC, CC[B]]
   |
   |                      Note that implicit conversions were not tried because the result of an implicit conversion
   |                      must be more specific than CC[A]
   |
   | longer explanation available when compiling with `-explain`
-- [E008] Not Found Error: tests/neg/i15998.scala:12:9 -----------------------------------------------------------------
12 |  "ABCD".isRotationOf("DAB")  // error
   |  ^^^^^^^^^^^^^^^^^^^
   |  value isRotationOf is not a member of String.
   |  An extension method was tried, but could not be fully constructed:
   |
   |      RingSeq.isRotationOf[A, CC]("ABCD")    failed with
   |
   |          Found:    ("ABCD" : String)
   |          Required: CC[A]
   |          
   |          where:    A  is a type variable
   |                    CC is a type variable with constraint <: [B] =>> collection.SeqOps[B, CC, CC[B]]
   |          
   |          Note that implicit conversions were not tried because the result of an implicit conversion
   |          must be more specific than CC[A]
-- Error: tests/neg/i15998.scala:21:13 ---------------------------------------------------------------------------------
21 |  val x = foo  // error
   |             ^
   |             No implicit search was attempted for parameter x of method foo
   |             since the expected type X is too unspecific
   |
   |             where:    X is a type variable
